--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> the TechCon 2024 conference website</h1>
+    <header>the TechCon 2024 conference website</header>
     <nav>
         <ul>
 
@@ -28,5 +28,6 @@
     </main>
     <footer>
        &copy; copy right 2025
+       </footer>
 </body>
 </html>
