--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -5,7 +5,10 @@
     <title>Document</title>
 </head>
 <body>
-    <header>the TechCon 2024 conference website</header>
+    <header>
+        <h1>the TechCon 2024 conference website</h1>
+
+        </header>
     <nav>
         <ul>
 
