--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -22,7 +22,13 @@
             <p>
                 History: An article detailing the origins and evolution of TechCon,
                  enhanced with historical images (mg> tags with appropriate alt attributes).
+
             </p>
+            <p>
+                Mission: A section that explains the goals and driving principles of the conference.
+                 Include any relevant motivational images or icons
+            </p>
+            <img src="/home/meron/Downloads/visn bord.png" alt="vision borad">
             <img src="/home/meron/Downloads/image.jpeg" alt="programing languges">
             <P>
                 Past Speakers: Showcase notable speakers from previous years with short biographies and their contributions to the tech industry.
