--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -20,22 +20,23 @@
     </nav>
     <main>
         <table>
-            <tr>
+            <td>
                 <th scope="col">Time</th>
                 <th scope="col">Session</th>
                 <th scope="col">Speaker</th>
-            </tr>
+            </td>
             <tr>
-                <td scope="row">2:30</td>
-                <td scope="row">mangenment</td>
-                <td scope="row">meron</td>
+                <td>2:30</td>
+                <td>mangenment</td>
+                <td>meron</td>
             </tr>
             <caption>Detailed Schedule of Events for TechCon 2024</caption>
    
         </table>
     </main>
     <footer>
-        &copy; 2022
+
+        &copy;  copyright 2022
     </footer>
 </body>
 </html>
