--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -25,12 +25,12 @@
                 <iframe src="https://www.example.com" width="600" height="400">google map</iframe>
                 <form action="/submit.form" method="post">
                    
-                    <label for="Name"">Name</label>
+                    <label for="Name">Name</label>
                     <input type="text" id="Name" name="fullname" required minlength="5" maxlength="8" placeholder="name">
 <label for="email">Email</label>
-<input type="email" id="email" name="email" placeholder="example@domain.com"> 
+<input type="email" id="email" name="email" required placeholder="example@domain.com"> 
 <label for="textarea">Message</label>
-
+<textarea id="feedback" name="feedback" rows="7" cols="60" placeholder="Enter your feedback here...">Message</textarea>
 <button type="submit">Send Message</button>
 
                 </form>
