--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -29,8 +29,8 @@
                     <input type="text" id="Name" name="fullname" required minlength="5" maxlength="8" placeholder="name">
 <label for="email">Email</label>
 <input type="email" id="email" name="email" required placeholder="example@domain.com"> 
-<label for="Message">Message</label>
-<textarea id="Message" name="Message" rows="7" cols="60" placeholder="Enter your feedback here...">Message</textarea>
+<label for="message">Message</label>
+<textarea id="message" name="userMessage" rows="7" cols="60" placeholder="Message">Message</textarea>
 <button type="submit">Send Message</button>
 
                 </form>
